--- a/actualStyle.css
+++ b/actualStyle.css
@@ -1,5 +1,5 @@
 body{
-    font-family: 'Trebuchet MS';
+    font-family:  ‘Palatino Linotype’, ‘Book Antiqua’, Palatino, serif;
     text-align:center;
     font-weight: 300;
 }
