--- a/actualStyle.css
+++ b/actualStyle.css
@@ -1,5 +1,5 @@
 body{
-    font-family: Gill Sans / Gill Sans MT, sans-serif;
+    font-family:Century Gothic, sans-serif;
     text-align:center;
     font-weight: 300;
 }
