--- a/actualStyle.css
+++ b/actualStyle.css
@@ -2,6 +2,9 @@ body{
     font-family:Century Gothic, sans-serif;
     text-align:center;
     font-weight: 300;
+    background-image: url("zona.jpeg");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 a{
@@ -20,11 +23,6 @@ hr{
     height: 1px;
     background: #333;
     background-image: linear-gradient(to right, #ccc, #333, #ccc);
-}
-
-body{
-  background-image: url("zona.jpeg");
-  background-size: cover;
 }
 
 #main{
