--- a/actualStyle.css
+++ b/actualStyle.css
@@ -1,5 +1,5 @@
 body{
-    font-family:Century Gothic, sans-serif;
+    font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
     text-align:center;
     font-weight: 300;
     background-image: url("zona.jpeg");
