changed background to space

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -45,16 +45,16 @@ p {
 }
 
 a {
-    color: #ffdc99;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
+    color: #FFFFFF;
 }
 
 a:hover,
 a:focus {
     text-decoration: none;
-    color: #1d9b6c;
+    color:#B4D7E6;
 }
 
 .light {
@@ -147,7 +147,8 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background-color: #000;
+    background: url(../img/uiuc.jpg) no-repeat bottom center scroll;
+    background-color: #c299ff;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -369,4 +370,16 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
+    background-color:#000;
+}
+
+
+
+
+/* My CSS is below */
+.custom-links {
+    font-size: 1.8em;
+}
+
+.my-name {
 }
