--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -378,7 +378,7 @@ body {
   left: -50%; 
   width: 200%; 
   height: 200%;
-  z-index: -1
+  z-index: 0;
 }
 #bg img {
   position: absolute; 
@@ -392,14 +392,20 @@ body {
 }
 
 .bio {
+    position: relative;
     line-height: 100%;
+    z-index: 1;
 }
 
 .custom-links {
+    position:relative;
     font-size: 1.8em;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    z-index: 2;
 }
 
 .my-name {
+    position: relative;
     line-height: 30%;
+    z-index: 4;
 }
