updates for mobile

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -409,3 +409,14 @@ body {
     line-height: 30%;
     z-index: 4;
 }
+
+@media screen and (max-width: 600px) {
+  .rocket {
+    visibility: hidden;
+    clear: both;
+    float: left;
+    margin: 10px auto 5px 20px;
+    width: 28%;
+    display: none;
+  }
+}
